[docs-only] And more envvars that are added to the table

--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
@@ -27,7 +27,7 @@
 |                                               | `OCIS_SERVICE_ACCOUNT_ID;AUTH_SERVICE_SERVICE_ACCOUNT_ID`                                                                                                                                          | The ID of the service account the service should use. See the 'auth-service' service description for more details.                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_SERVICE_ACCOUNT_SECRET;AUTH_SERVICE_SERVICE_ACCOUNT_SECRET`                                                                                                                                  | The service account secret.                                                                                                                                                                                                                                                                                                                                                                                                                                                 |                                       |
 | services/auth-service/pkg/config/reva.go      | `OCIS_JWT_SECRET;AUTH_SERVICE_JWT_SECRET`                                                                                                                                                          | The secret to mint and validate jwt tokens.                                                                                                                                                                                                                                                                                                                                                                                                                                 |                                       |
-| services/clientlog/pkg/config/config.go       | `OCIS_REVA_GATEWAY`                                                                                                                                                                                | CS3 gateway used to look up user metadata                                                                                                                                                                                                                                                                                                                                                                                                                                   |                                       |
+| services/clientlog/pkg/config/config.go       | `OCIS_REVA_GATEWAY;CLIENTLOG_REVA_GATEWAY`                                                                                                                                                         | CS3 gateway used to look up user metadata                                                                                                                                                                                                                                                                                                                                                                                                                                   |                                       |
 |                                               | `OCIS_EVENTS_ENDPOINT;CLIENTLOG_EVENTS_ENDPOINT`                                                                                                                                                   | The address of the event system. The event system is the message queuing service. It is used as message broker for the microservice architecture.                                                                                                                                                                                                                                                                                                                           |                                       |
 |                                               | `OCIS_EVENTS_CLUSTER;CLIENTLOG_EVENTS_CLUSTER`                                                                                                                                                     | The clusterID of the event system. The event system is the message queuing service. It is used as message broker for the microservice architecture. Mandatory when using NATS as event system.                                                                                                                                                                                                                                                                              |                                       |
 |                                               | `OCIS_INSECURE;CLIENTLOG_EVENTS_TLS_INSECURE`                                                                                                                                                      | Whether to verify the server TLS certificates.                                                                                                                                                                                                                                                                                                                                                                                                                              |                                       |
@@ -138,17 +138,17 @@
 |                                               | `OCIS_TRACING_TYPE;OCM_TRACING_TYPE`                                                                                                                                                               | The type of tracing. Defaults to '', which is the same as 'jaeger'. Allowed tracing types are 'jaeger' and '' as of now."`                                                                                                                                                                                                                                                                                                                                                  |                                       |
 |                                               | `OCIS_TRACING_ENDPOINT;OCM_TRACING_ENDPOINT`                                                                                                                                                       | The endpoint of the tracing agent.                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_TRACING_COLLECTOR;OCM_TRACING_COLLECTOR`                                                                                                                                                     | The HTTP endpoint for sending spans directly to a collector, i.e. http://jaeger-collector:14268/api/traces. Only used if the tracing endpoint is unset.                                                                                                                                                                                                                                                                                                                     |                                       |
+| services/ocs/pkg/config/config.go             | `OCIS_CACHE_STORE;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE`                                                                                                                                             | The type of the signing key store. Supported values are: 'redis-sentinel' and 'nats-js-kv'. See the text description for details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_STORE_NODES;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_NODES`                                                                                                                                 | A list of nodes to access the configured store. Note that the behaviour how nodes are used is dependent on the library of the configured store. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_TTL;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_TTL`                                                                                                                                           | Default time to live for signing keys. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_AUTH_USERNAME;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_AUTH_USERNAME`                                                                                                                       | The username to authenticate with the store. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_AUTH_PASSWORD;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_AUTH_PASSWORD`                                                                                                                       | The password to authenticate with the store. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/policies/pkg/config/config.go        | `OCIS_EVENTS_AUTH_USERNAME;POLICIES_EVENTS_AUTH_USERNAME`                                                                                                                                          | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD;POLICIES_EVENTS_AUTH_PASSWORD`                                                                                                                                          | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/policies/pkg/config/tracing.go       | `OCIS_TRACING_ENABLED;POLICIES_TRACING_ENABLED`                                                                                                                                                    | Activates tracing.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_TRACING_TYPE;POLICIES_TRACING_TYPE`                                                                                                                                                          | The type of tracing. Defaults to '', which is the same as 'jaeger'. Allowed tracing types are 'jaeger' and '' as of now."`                                                                                                                                                                                                                                                                                                                                                  |                                       |
 |                                               | `OCIS_TRACING_ENDPOINT;POLICIES_TRACING_ENDPOINT`                                                                                                                                                  | The endpoint of the tracing agent.                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_TRACING_COLLECTOR;POLICIES_TRACING_COLLECTOR`                                                                                                                                                | The HTTP endpoint for sending spans directly to a collector, i.e. http://jaeger-collector:14268/api/traces. Only used if the tracing endpoint is unset.                                                                                                                                                                                                                                                                                                                     |                                       |
-| services/ocs/pkg/config/config.go             | `OCIS_CACHE_STORE;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE`                                                                                                                                             | The type of the signing key store. Supported values are: 'redis-sentinel' and 'nats-js-kv'. See the text description for details.                                                                                                                                                                                                                                                                                                                         |                                       |
-|                                               | `OCIS_CACHE_STORE_NODES;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_NODES`                                                                                                                                 | A list of nodes to access the configured store. Note that the behaviour how nodes are used is dependent on the library of the configured store. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
-|                                               | `OCIS_CACHE_TTL;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_TTL`                                                                                                                                           | Default time to live for signing keys. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
-|                                               | `OCIS_CACHE_AUTH_USERNAME;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_AUTH_USERNAME`                                                                                                                       | The username to authenticate with the store. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                         |                                       |
-|                                               | `OCIS_CACHE_AUTH_PASSWORD;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_AUTH_PASSWORD`                                                                                                                       | The password to authenticate with the store. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/postprocessing/pkg/config/config.go  | `POSTPROCESSING_RETRY_BACKOFF_DURATION`                                                                                                                                                            | The base for the exponential backoff duration before retrying a failed postprocessing step. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                |                                       |
 |                                               | `POSTPROCESSING_MAX_RETRIES`                                                                                                                                                                       | The maximum number of retries for a failed postprocessing step.                                                                                                                                                                                                                                                                                                                                                                                                             |                                       |
 |                                               | `OCIS_EVENTS_AUTH_USERNAME;POSTPROCESSING_EVENTS_AUTH_USERNAME`                                                                                                                                    | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
