--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.adoc
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.adoc
@@ -101,7 +101,8 @@
 | The secret to mint and validate jwt tokens.|
 
 | xref:{s-path}/clientlog.adoc[clientlog]
-| `OCIS_REVA_GATEWAY`
+| `OCIS_REVA_GATEWAY` +
+`CLIENTLOG_REVA_GATEWAY`
 | CS3 gateway used to look up user metadata|
 |
 | `OCIS_EVENTS_ENDPOINT` +
