--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
@@ -5,9 +5,10 @@
 | ocis-pkg/shared/shared_types.go               | `OCIS_CACHE_DISABLE_PERSISTENCE`                                                                                                                                                                   | Disables persistence of the cache. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                                                                                 | `false`                               |
 | ocis-pkg/registry/registry.go                 | `MICRO_REGISTRY` (important change)                                                                                                                                                                | The Go micro registry type to use. Supported types are: 'memory', 'nats-js-kv' (default) and 'kubernetes'. Note that 'nats', 'etcd', 'consul' and 'mdns' are deprecated and will be removed in a later version. Only change on supervision of ownCloud Support.                                                                                                                                                                                                             | `nats-js-kv`                          |
 | ocis-pkg/natsjsregistry/registry.go           | `MICRO_REGISTRY_AUTH_USERNAME`                                                                                                                                                                     | Optional when using nats to authenticate with the nats cluster.                                                                                                                                                                                                                                                                                                                                                                                                             |                                       |
+|                                               | `MICRO_REGISTRY_AUTH_PASSWORD`                                                                                                                                                                     | Optional when using nats to authenticate with the nats cluster.                                                                                                                                                                                                                                                                                                                                                                                                             |                                       |
 | services/antivirus/pkg/config/config.go       | `OCIS_EVENTS_AUTH_USERNAME`                                                                                                                                                                        | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD`                                                                                                                                                                        | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
-|                                               | `ANTIVIRUS_ICAP_SCAN_TIMEOUT`                                                                                                                                                                      | Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                                            | 5m0s                                  |
+|                                               | `ANTIVIRUS_ICAP_SCAN_TIMEOUT`                                                                                                                                                                      | Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                                            |   5m0s                                |
 | services/audit/pkg/config/config.go           | `OCIS_EVENTS_AUTH_USERNAME`                                                                                                                                                                        | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD`                                                                                                                                                                        | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/auth-service/pkg/config/config.go    | `OCIS_LOG_LEVEL;AUTH_SERVICE_LOG_LEVEL`                                                                                                                                                            | The log level. Valid values are: 'panic', 'fatal', 'error', 'warn', 'info', 'debug', 'trace'."                                                                                                                                                                                                                                                                                                                                                                              |                                       |
@@ -54,7 +55,8 @@
 |                                               | `OCIS_PERSISTENT_STORE_AUTH_PASSWORD;EVENTHISTORY_STORE_AUTH_PASSWORD`                                                                                                                             | The password to authenticate with the store. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                                                                       |                                       |
 |                                               | `OCIS_EVENTS_AUTH_USERNAME;EVENTHISTORY_EVENTS_AUTH_USERNAME`                                                                                                                                      | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD;EVENTHISTORY_EVENTS_AUTH_PASSWORD`                                                                                                                                      | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
-| services/frontend/pkg/config/config.go        | `FRONTEND_DEFAULT_LINK_PERMISSIONS`                                                                                                                                                                | Defines the default permissions a link is being created with. Possible values are 0 (= internal link, for instance members only) and 1 (= public link with viewer permissions). Defaults to 1.                                                                                                                                                                                                                                                                              |                                       |
+| services/frontend/pkg/config/config.go        | `OCIS_ENABLE_RESHARING`                                                                                                                                                                            | Changing this value is NOT supported. Enables the support for resharing in the clients.                                                                                                                                                                                                                                                                                                                                                                                     |                                       |
+|                                               | `FRONTEND_DEFAULT_LINK_PERMISSIONS`                                                                                                                                                                | Defines the default permissions a link is being created with. Possible values are 0 (= internal link, for instance members only) and 1 (= public link with viewer permissions). Defaults to 1.                                                                                                                                                                                                                                                                              |                                       |
 |                                               | `FRONTEND_AUTO_ACCEPT_SHARES`                                                                                                                                                                      | Defines if shares should be auto accepted by default. Users can change this setting individually in their profile.                                                                                                                                                                                                                                                                                                                                                          | true                                  |
 |                                               | `OCIS_CACHE_DISABLE_PERSISTENCE;FRONTEND_OCS_STAT_CACHE_DISABLE_PERSISTENCE`                                                                                                                       | Disable persistence of the cache. Only applies when using the 'nats-js-kv' store type. Defaults to false.                                                                                                                                                                                                                                                                                                                                                                   | false                                 |
 |                                               | `OCIS_CACHE_AUTH_USERNAME;FRONTEND_OCS_STAT_CACHE_AUTH_USERNAME`                                                                                                                                                                     | The username to use for authentication. Only applies when using the 'nats-js-kv' store type.                                                                                                                                                                                                                                                                                                                                              |                                       |
@@ -185,11 +187,9 @@
 |                                               | `OCIS_CACHE_DISABLE_PERSISTENCE;SETTINGS_CACHE_DISABLE_PERSISTENCE`                                                                                                                                | Disables persistence of the cache. Only applies when store type 'nats-js-kv' is configured. Defaults to false.                                                                                                                                                                                                                                                                                                                                                              |                                       |
 |                                               | `OCIS_CACHE_AUTH_USERNAME;SETTINGS_CACHE_AUTH_USERNAME`                                                                                                                                            | The username to authenticate with the cache. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                                                                       |                                       |
 |                                               | `OCIS_CACHE_AUTH_PASSWORD;SETTINGS_CACHE_AUTH_PASSWORD`                                                                                                                                            | The password to authenticate with the cache. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                                                                       |                                       |
-| services/sharing/pkg/config/config.go         | `OCIS_SHARING_PUBLIC_WRITEABLE_SHARE_MUST_HAVE_PASSWORD;SHARING_PUBLIC_WRITEABLE_SHARE_MUST_HAVE_PASSWORD`                                                                                         | Set this to true if you want to enforce passwords on Uploader, Editor or Contributor shares. If not using the global OCIS_SHARING_PUBLIC_WRITEABLE_SHARE_MUST_HAVE_PASSWORD, you must define the FRONTEND_OCS_PUBLIC_WRITEABLE_SHARE_MUST_HAVE_PASSWORD in the frontend service.                                                                                                                                                                                            |                                       |
-|                                               | `OCIS_SHARING_PUBLIC_SHARE_MUST_HAVE_PASSWORD;SHARING_PUBLIC_SHARE_MUST_HAVE_PASSWORD`                                                                                                             | Set this to true if you want to enforce passwords on all public shares.                                                                                                                                                                                                                                                                                                                                                                                                     |                                       |
-|                                               | `OCIS_EVENTS_AUTH_USERNAME;SHARING_EVENTS_AUTH_USERNAME`                                                                                                                                           | Username for the events broker.                                                                                                                                                                                                                                                                                                                                                                                                                                             |                                       |
-|                                               | `OCIS_EVENTS_AUTH_PASSWORD;SHARING_EVENTS_AUTH_PASSWORD`                                                                                                                                           | Password for the events broker.                                                                                                                                                                                                                                                                                                                                                                                                                                             |                                       |
-|                                               | `OCIS_PASSWORD_POLICY_DISABLED;SHARING_PASSWORD_POLICY_DISABLED`                                                                                                                                   | Disable the password policy. Defaults to false if not set.                                                                                                                                                                                                                                                                                                                                                                                                                  |                                       |
+|                                               | `OCIS_EVENTS_AUTH_USERNAME;SETTINGS_EVENTS_AUTH_USERNAME`                                                                                                                                          | The username to authenticate with the cache. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                                                                       |                                       |
+|                                               | `OCIS_EVENTS_AUTH_PASSWORD;SETTINGS_EVENTS_AUTH_PASSWORD`                                                                                                                                          | The password to authenticate with the cache. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                                                                       |                                       |
+| services/sharing/pkg/config/config.go         | `OCIS_SHARING_PUBLIC_SHARE_MUST_HAVE_PASSWORD;SHARING_PUBLIC_SHARE_MUST_HAVE_PASSWORD`                                                                                                             | Set this to true if you want to enforce passwords on all public shares.                                                                                                                                                                                                                                                                                                                                                                                                     |                                       |
 |                                               | `OCIS_PASSWORD_POLICY_MIN_CHARACTERS;SHARING_PASSWORD_POLICY_MIN_CHARACTERS`                                                                                                                       | Define the minimum password length. Defaults to 0 if not set.                                                                                                                                                                                                                                                                                                                                                                                                               | 0                                     |
 |                                               | `OCIS_PASSWORD_POLICY_MIN_LOWERCASE_CHARACTERS;SHARING_PASSWORD_POLICY_MIN_LOWERCASE_CHARACTERS`                                                                                                   | Define the minimum number of lowercase characters. Defaults to 0 if not set.                                                                                                                                                                                                                                                                                                                                                                                                | 0                                     |
 |                                               | `OCIS_PASSWORD_POLICY_MIN_UPPERCASE_CHARACTERS;SHARING_PASSWORD_POLICY_MIN_UPPERCASE_CHARACTERS`                                                                                                   | Define the minimum number of uppercase characters. Defaults to 0 if not set.                                                                                                                                                                                                                                                                                                                                                                                                | 0                                     |
