[docs-only] Finally fixed the added tables, 2 envvars were accidentially deleted

--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.adoc
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.adoc
@@ -692,6 +692,14 @@
 `SETTINGS_CACHE_DISABLE_PERSISTENCE`
 | Disables persistence of the cache. Only applies when store type 'nats-js-kv' is configured. Defaults to false.|
 |
+| `OCIS_CACHE_AUTH_USERNAME` +
+`SETTINGS_CACHE_AUTH_USERNAME`
+| The username to authenticate with the cache. Only applies when store type 'nats-js-kv' is configured.|
+|
+| `OCIS_CACHE_AUTH_PASSWORD` +
+`SETTINGS_CACHE_AUTH_PASSWORD`
+| The password to authenticate with the cache. Only applies when store type 'nats-js-kv' is configured.|
+|
 | `OCIS_EVENTS_AUTH_USERNAME` +
 `SETTINGS_EVENTS_AUTH_USERNAME`
 | The username to authenticate with the cache. Only applies when store type 'nats-js-kv' is configured.|
