--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
@@ -132,7 +132,7 @@
 |                                               | `OCM_OCM_CORE_JSON_FILE`                                                                                                                                                                           | Path to the JSON file where OCM share data will be stored. If not defined, the root directory derives from $OCIS_BASE_DATA_PATH:/storage.                                                                                                                                                                                                                                                                                                                                   |                                       |
 |                                               | `OCM_OCM_SHARE_PROVIDER_DRIVER`                                                                                                                                                                    | Driver to be used to persist ocm shares. Supported value is only 'json'.                                                                                                                                                                                                                                                                                                                                                                                                    | `json`                                |
 |                                               | `OCM_OCM_SHARE_PROVIDER_INSECURE`                                                                                                                                                                  | Disable TLS certificate validation for the OCM connections. Do not set this in production environments.                                                                                                                                                                                                                                                                                                                                                                     |                                       |
-|                                               | `OCM_WEBAPP_TEMPLATE`                                                                                                                                                                              | 'Template for the webapp url.                                                                                                                                                                                                                                                                                                                                                                                                                                               |                                       |
+|                                               | `OCM_WEBAPP_TEMPLATE`                                                                                                                                                                              | Template for the webapp url.                                                                                                                                                                                                                                                                                                                                                                                                                                                |                                       |
 |                                               | `OCM_OCM_SHAREPROVIDER_JSON_FILE`                                                                                                                                                                  | Path to the JSON file where OCM share data will be stored. If not defined, the root directory derives from $OCIS_BASE_DATA_PATH:/storage.                                                                                                                                                                                                                                                                                                                                   |                                       |
 | services/ocm/pkg/config/debug.go              | `OCM_DEBUG_ADDR`                                                                                                                                                                                   | Bind address of the debug server, where metrics, health, config and debug endpoints will be exposed.                                                                                                                                                                                                                                                                                                                                                                        |                                       |
 |                                               | `OCM_DEBUG_TOKEN`                                                                                                                                                                                  | Token to secure the metrics endpoint.                                                                                                                                                                                                                                                                                                                                                                                                                                       |                                       |
