--- a/services/_includes/adoc/frontend_configvars.adoc
+++ b/services/_includes/adoc/frontend_configvars.adoc
@@ -4,7 +4,7 @@
 
 ifeval::[{show-deprecation} == true]
 
-[#deprecation-note-2024-03-27-08-17-18]
+[#deprecation-note-2024-03-27-09-32-54]
 [caption=]
 .Deprecation notes for the frontend service
 [width="100%",cols="~,~,~,~",options="header"]
@@ -327,11 +327,11 @@ The default upload protocol to use in clients. Currently only 'tus' is avaliable
 
 a|`OCIS_ENABLE_RESHARING` +
 `FRONTEND_ENABLE_RESHARING` +
-xref:deprecation-note-2024-03-27-08-17-18[Deprecation Note]
+xref:deprecation-note-2024-03-27-09-32-54[Deprecation Note]
 a| [subs=-attributes]
 ++bool ++
 a| [subs=-attributes]
-++true ++
+++false ++
 a| [subs=-attributes]
 Changing this value is NOT supported. Enables the support for resharing in the clients.
 
