--- a/services/graph/pkg/service/v0/l10n/locale/ru/LC_MESSAGES/graph.po
+++ b/services/graph/pkg/service/v0/l10n/locale/ru/LC_MESSAGES/graph.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: EMAIL\n"
-"POT-Creation-Date: 2024-04-05 00:41+0000\n"
+"POT-Creation-Date: 2024-04-12 01:22+0000\n"
 "PO-Revision-Date: 2024-04-04 00:17+0000\n"
 "Last-Translator: Alex <hostspepc@gmail.com>, 2024\n"
 "Language-Team: Russian (https://app.transifex.com/owncloud-org/teams/6149/ru/)\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-#. text for the readme.md file
+#. default description for new spaces
 #: pkg/service/v0/spacetemplates.go:37
 msgid "Here you can add a description for this Space."
 msgstr "Здесь вы можете добавить описание этого пространства."
