--- a/services/graph/pkg/service/v0/l10n/locale/zh_HK/LC_MESSAGES/graph.po
+++ b/services/graph/pkg/service/v0/l10n/locale/zh_HK/LC_MESSAGES/graph.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: EMAIL\n"
-"POT-Creation-Date: 2024-04-05 00:41+0000\n"
+"POT-Creation-Date: 2024-04-12 01:22+0000\n"
 "PO-Revision-Date: 2024-04-04 00:17+0000\n"
 "Last-Translator: Ann Li <dn.annli@gmail.com>, 2024\n"
 "Language-Team: Chinese (Hong Kong) (https://app.transifex.com/owncloud-org/teams/6149/zh_HK/)\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Language: zh_HK\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#. text for the readme.md file
+#. default description for new spaces
 #: pkg/service/v0/spacetemplates.go:37
 msgid "Here you can add a description for this Space."
 msgstr "你可以在此添加這空間的描述"
